# thearc-websitenew

./: .gitignore  .vercelignore  ANALYTICS_DEBUGGING.md  ANALYTICS_FIXED.md  ARCHITECTURE_OVERVIEW.md  COMPLETE_SOLUTION.md  DEPLOYMENT_COMPLETE.md  EXPLORER_PAGE_VERSION_NOTES.md  FIND_THEARC_TAG.md  GA4_TROUBLESHOOTING.md  GLOBAL_LAYOUT_SYSTEM_COMPLETE.md  GLOBAL_STYLING_FIXED.md  GOOGLE_ANALYTICS_FIX_COMPLETE.md  GOOGLE_ANALYTICS_SETUP.md  GOOGLE_TAG_MANAGER_FIX.md  GTM_INSTALLATION_COMPLETE.md  HELP_REQUEST.md  ISSUE_SUMMARY_WOMEN_DASHBOARD.md  LOCALHOST_ACCESS.md  LOCAL_DEPLOYMENT_STATUS.md  PREMIUM_REFACTOR_COMPLETE.md  QUICK_REFERENCE.md  TECHNICAL_MVP_SETUP_2025.md  VERCEL_DEPLOYMENT_GUIDE.md  debug-questionnaire.html  package-lock.json  package.json  test-api-debug.html  test-complete-flow.html  test-direct-api.html  test-flow.html  test-localstorage-debug.html  test-localstorage.html  test-main-questionnaire.html  test-questionnaire-data.html  test-questionnaire-debug.html  test-scoring-fix.html  test-simple-questionnaire.html  test-transformation.html  vercel.json
catalog_backend-master/src/: Dockerfile  docker-compose.yml  fixture.json  manage.py  pyproject.toml
catalog_backend-master/src/api/: pagination.py
catalog_backend-master/src/api/v1/: urls.py
catalog_backend-master/src/apps/blog/: admin.py  models.py
catalog_backend-master/src/apps/services/: admin.py  (+2 more)
catalog_backend-master/src/hainu/: asgi.py  settings.py  urls.py  wsgi.py
catalog_backend-master/src/static-files/: staticfiles.json
catalog_backend-master/src/staticfiles/: staticfiles.json
(+829 files in other folders)
